kubespray/hj/env-local/k8s/queue/backend/queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: queue-api
    namespace: queue
spec:
    replicas: 1
    selector:
        matchLabels:
            app: queue-api
    template:
        metadata:
            labels:
                app: queue-api
        spec:
            containers:
                - name: queue-api
                  image: k3d-local-registry:5001/ticketing-queue:latest # 개인의 환경에 맞게 설정
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8083
