kubespray/hj/env-local/k8s/queue/backend/queue-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: queue-api
    namespace: queue
spec:
    type: ClusterIP
    selector:
        app: queue-api
    ports:
        - name: http
          port: 8083
          targetPort: 8083
