kubespray/hj/env-local/k8s/queue/backend/queue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: queue-api-ingress
    namespace: queue
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - local.api.ddcn41.com
          secretName: ddcn41-tls
    rules:
        - host: local.api.ddcn41.com
          http:
              paths:
                  - path: /v1/queue/
                    pathType: Prefix
                    backend:
                        service:
                            name: queue-api
                            port:
                                number: 8083
